--- a/xapian-haskell.cabal
+++ b/xapian-haskell.cabal
@@ -25,6 +25,7 @@ library
                       Search.Xapian.Types,
                       Search.Xapian.Stem
                       Search.Xapian.Query
+                      Search.Xapian.Query.Combinators
                       Search.Xapian
   other-modules:      Search.Xapian.Internal.Types,
                       Search.Xapian.FFI
