--- a/xapian-haskell.cabal
+++ b/xapian-haskell.cabal
@@ -49,7 +49,8 @@ library
                       blaze-builder,
                       bytestring,
                       cereal,
-                      containers
+                      containers,
+                      mtl >= 2.0
   ghc-options:          -Wall -funbox-strict-fields -O
   ghc-prof-options:     -Wall -funbox-strict-fields -O -prof -auto-all
   extensions:         EmptyDataDecls,
