--- a/xapian-haskell.cabal
+++ b/xapian-haskell.cabal
@@ -42,6 +42,7 @@ library
                       Search.Xapian.Stem,
                       Search.Xapian.Query,
                       Search.Xapian.Query.Combinators,
+                      Search.Xapian.MSet,
                       Search.Xapian,
                       Search.Xapian.Internal.Types,
                       Search.Xapian.Internal.Utils
