--- a/xapian-haskell.cabal
+++ b/xapian-haskell.cabal
@@ -27,6 +27,7 @@ extra-source-files: examples/SimpleIndex.hs
                     cbits/cxapian_termiterator.h
                     cbits/cxapian_types.h
                     cbits/cxapian_valueiterator.h
+                    cbits/cxapian_queryparser.h
                     cbits/ccstring.h
                     cbits/Makefile
 
@@ -70,6 +71,7 @@ library
                       cbits/cxapian_termgenerator.cc
                       cbits/cxapian_termiterator.cc
                       cbits/cxapian_valueiterator.cc
+                      cbits/cxapian_queryparser.cc
                       cbits/ccstring.cc
   cc-options:         -Wall -c
   extra-libraries:    xapian
