port all of query.h to use std::string, introduce dependency for Data.Text to handle Utf8 correctly (in future)

--- a/xapian-haskell.cabal
+++ b/xapian-haskell.cabal
@@ -50,6 +50,7 @@ library
                       Search.Xapian.Internal.Utils
   build-depends:      base,
                       bytestring,
+                      text,
                       containers,
                       enumerator,
                       mtl >= 2.0
